# layercode-examples

./: README.md
fast-slow-voice-patterns/: .env.example  README.md  package.json  tsconfig.json
fast-slow-voice-patterns/src/: server.ts
fast-slow-voice-patterns/src/routes/: agent-echo-relay.ts  agent-shadow.ts  agent-speculative-answerer.ts
fast-slow-voice-patterns/test/: README.md  benchmark.ts  quick-test.ts  run-all.sh  send-webhook.ts
python-client-for-evaluation/: .env.example  README.md  pyproject.toml  simple_ai_client.py  simple_file_client.py  simple_tts_client.py
python-fastapi-backend/: .env.example  Makefile  README.md  layercode.config.json  layercode_sdk.py  main.py  pyproject.toml
python-fasthtml-chatbot/: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
python-fasthtml-chatbot/static/: chat-frontend.js
