[project]
name = "python-client-for-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "logfire>=4.14.2",
    "loguru>=0.7.3",
    "openai>=2.6.1",
    "pydantic-ai>=1.9.1",
    "python-dotenv>=1.2.1",
]
